Fix overflow bug - final

--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -183,3 +183,20 @@ a.social-icon {
   animation-iteration-count: 1;
 }
 
+
+
+
+
+
+
+@media only screen and (max-width: 900px) {
+  .footer {
+    height: 33em;
+  }
+  .footer-link {
+    display: block;
+  }
+}
+
+
+
